RESOLVED FIXED297058
Fonts located in application bundles should not be registered in the WebContent process
https://bugs.webkit.org/show_bug.cgi?id=297058
Summary Fonts located in application bundles should not be registered in the WebConte...
Per Arne Vollan
Reported 2025-08-07 09:54:12 PDT
Fonts located in application bundles should not be registered in the WebContent process
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-07 09:54:21 PDT
Per Arne Vollan
Comment 2 2025-08-07 10:04:02 PDT
EWS
Comment 3 2025-08-07 11:52:47 PDT
Committed 298353@main (263b59993334): <https://commits.webkit.org/298353@main> Reviewed commits have been landed. Closing PR #49063 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.