Fonts located in application bundles should not be registered in the WebContent process https://bugs.webkit.org/show_bug.cgi?id=297058 rdar://157762628

Reviewed by Basuke Suzuki.

Fonts in application bundles should not be registered in the WebContent process, since the WebContent process
does not have read access in those locations.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::registerUserInstalledFonts):

Canonical link: https://commits.webkit.org/298353@main